[WIP] very early steps toward a valkryie migration

--- a/lib/generators/hyrax/work/templates/model.rb.erb
+++ b/lib/generators/hyrax/work/templates/model.rb.erb
@@ -1,14 +1,14 @@
 # Generated via
 #  `rails generate hyrax:work <%= class_name %>`
-class <%= class_name %> < ActiveFedora::Base
+class <%= class_name %> < Valkyrie::Resource
   include ::Hyrax::WorkBehavior
 
-  self.indexer = <%= class_name %>Indexer
+  # self.indexer = <%= class_name %>Indexer
   # Change this to restrict which works can be added as a child.
   # self.valid_child_concerns = []
-  validates :title, presence: { message: 'Your work must have a title.' }
+  # validates :title, presence: { message: 'Your work must have a title.' }
 
-  self.human_readable_type = '<%= name.underscore.titleize %>'
+  # self.human_readable_type = '<%= name.underscore.titleize %>'
 
   # This must be included at the end, because it finalizes the metadata
   # schema (by adding accepts_nested_attributes)
