--- a/app/views/hyrax/collections/_form.html.erb
+++ b/app/views/hyrax/collections/_form.html.erb
@@ -1,86 +1,97 @@
 <div class="panel panel-default tabs" id="collection-controls">
   <ul class="nav nav-tabs" role="tablist">
-    <li class="active">
-      <a href="#description" role="tab" data-toggle="tab"><%= t('.tabs.description') %></a>
-    </li>
+    <li class="active"><a href="#description" role="tab" data-toggle="tab"><%= t('.tabs.description') %></a></li>
     <% if @form.persisted? %>
-      <li>
-        <a href="#discovery" role="tab" data-toggle="tab"><%= t('.tabs.discovery') %></a>
-      </li>
-      <li>
-        <a href="#sharing" role="tab" data-toggle="tab"><%= t('.tabs.sharing') %></a>
-      </li>
-    <% end %>
+      <li><a href="#branding" role="tab" data-toggle="tab"><%= t('.tabs.branding') %></a></li>
+      <% if @form.relationships? %>
+        <li><a href="#relationships" role="tab" data-toggle="tab"><%= t('.tabs.relationships') %></a></li>
+      <% end %>
+      <% if @form.sharing? %>
+        <li><a href="#sharing" role="tab" data-toggle="tab"><%= t('.tabs.sharing') %></a></li>
+      <% end %>
+      <% if @form.visibility? %>
+       <li><a href="#visibility" role="tab" data-toggle="tab"><%= t('.tabs.visibility') %></a></li>
+      <% end %>
+      <% if @form.discovery? %>
+        <li><a href="#discovery" role="tab" data-toggle="tab"><%= t('.tabs.discovery') %></a></li>
+      <% end %>
+      <% if @form.workflow? %>
+        <li><a href="#workflow" role="tab" data-toggle="tab"><%= t('.tabs.workflow') %></a></li>
+      <% end %>
+  <% end %>
   </ul>
   <%= simple_form_for @form, html: { class: 'editor' } do |f| %>
-
   <div class="tab-content">
-      <div id="description" class="tab-pane active">
+    <div id="description" class="tab-pane active">
+      <div class="panel panel-default labels">
+        <div class="panel-body">
+          <%= render 'form_description', f: f %>
+        </div>
+      </div>
+    </div>
+    <% if @form.persisted? %>
+      <div id="branding" class="tab-pane">
         <div class="panel panel-default labels">
           <div class="panel-body">
-
-            <h2 class="non lower"><%= t('hyrax.collection.form.description') %></h2>
-            <div id="base-terms">
-              <% f.object.primary_terms.each do |term| %>
-                <%= render_edit_field_partial(term, f: f) %>
-              <% end %>
-
-              <% if f.object.persisted? %>
-                <%# we're loading these values dynamically to speed page load %>
-                <%= f.input :thumbnail_id,
-                            input_html: { data: { text: f.object.thumbnail_title } } %>
-              <% end %>
+            <%= render 'form_branding', f: f %>
+          </div>
+        </div>
+      </div>
+      <% if @form.relationships? %>
+        <div id="relationships" class="tab-pane">
+          <div class="panel panel-default labels">
+            <div class="panel-body">
+              <%= render 'form_relationships', f: f %>
             </div>
-            <% if f.object.display_additional_fields? %>
-              <%= link_to t('hyrax.collection.form.additional_fields'),
-                      '#extended-terms',
-                      class: 'btn btn-default additional-fields',
-                      data: { toggle: 'collapse' },
-                      role: "button",
-                      'aria-expanded'=> "false",
-                      'aria-controls'=> "extended-terms" %>
-              <div id="extended-terms" class='collapse'>
-                <% f.object.secondary_terms.each do |term| %>
-                  <%= render_edit_field_partial(term, f: f) %>
-                <% end %>
-              </div>
-            <% end %>
-            <%= hidden_field_tag :type, params[:type] %>
-            <% if params[:batch_document_ids].present? %>
-              <% params[:batch_document_ids].each do |batch_item| %>
-                <input type="hidden" name="batch_document_ids[]" value="<%= batch_item %>"/>
-              <% end %>
-            <% end %>
           </div>
         </div>
-      </div>
-
-      <div id="discovery" class="tab-pane">
-        <div class="panel panel-default labels">
-          <div class="panel-body">
-            <%= render 'form_discovery', f: f %>
+      <% end %>
+      <% if @form.sharing? %>
+        <div id="sharing" class="tab-pane">
+          <div class="panel panel-default labels" id="collection_permissions" data-param-key="<%= f.object.model_name.param_key %>">
+            <div class="panel-body">
+              <%= render 'form_share', f: f %>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div id="sharing" class="tab-pane">
-        <div class="panel panel-default labels" id="collection_permissions" data-param-key="<%= f.object.model_name.param_key %>">
-          <div class="panel-body">
-            <%= render 'form_share', f: f %>
+      <% end %>
+      <% if @form.visibility? %>
+        <div id="visibility" class="tab-pane">
+          <div class="panel panel-default labels">
+            <div class="panel-body">
+              <%= render 'form_permission', f: f %>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div class="panel-footer">
-        <% if params[:action] == "new" %>
-          <%= f.submit t(:'hyrax.collection.select_form.create'), class: 'btn btn-primary', onclick: "confirmation_needed = false;", id: "create_submit", name: "create_collection" %>
-        <% else %>
-          <%= f.submit t(:'hyrax.collection.select_form.update'), class: 'btn btn-primary', onclick: "confirmation_needed = false;", id: "update_submit", name: "update_collection" %>
-        <% end %>
-        <%= link_to t(:'helpers.action.cancel'), main_app.root_path, class: 'btn btn-link' %>
-      </div>
-
+      <% end %>
+      <% if @form.discovery? %>
+        <div id="discovery" class="tab-pane">
+          <div class="panel panel-default labels">
+            <div class="panel-body">
+              <%= render 'form_discovery', f: f %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+      <% if @form.workflow? %>
+        <div id="workflow" class="tab-pane">
+          <div class="panel panel-default labels">
+            <div class="panel-body">
+              <%= render 'form_workflow', f: f %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+    <div class="panel-footer">
+      <% if @form.persisted? %>
+          <%= f.submit t('hyrax.collection.select_form.update'), class: 'btn btn-primary', onclick: "confirmation_needed = false;", id: "update_submit", name: "update_collection" %>
+      <% else %>
+          <%= f.submit t('hyrax.collection.select_form.create'), class: 'btn btn-primary', onclick: "confirmation_needed = false;", id: "create_submit", name: "create_collection" %>
+      <% end %>
+      <%= link_to t('helpers.action.cancel'), main_app.root_path, class: 'btn btn-link' %>
+    </div>
   <% end %>
   <% # end of form %>
-
+  </div>
 </div>
