--- a/app/views/hyrax/my/collections/index.html.erb
+++ b/app/views/hyrax/my/collections/index.html.erb
@@ -11,28 +11,52 @@
 
 <% provide :page_header do %>
   <h1><span class="fa fa-folder-open"></span> <%= t("hyrax.admin.sidebar.collections") %></h1>
-  <div class="pull-right">
-    <% if can?(:create, Collection) %>
-      <%= link_to(
-            t(:'helpers.action.collection.new'),
-            hyrax.new_collection_path,
-            class: 'btn btn-primary'
-          ) %>
-    <% end %>
-  </div>
 <% end %>
 
-<div class="row">
-  <div class="col-md-12">
-    <div class="panel panel-default<%= ' tabs' if can?(:read, :admin_dashboard) %>">
-      <%= render 'tabs' if can?(:read, :admin_dashboard) %>
-      <div class="panel-body">
-        <%= render 'search_header' %>
-        <h2 class="sr-only">Collections listing</h2>
-        <%= render 'document_list' %>
+<div class="collections-wrapper">
+  <section class="tabs-row">
+    <!-- Page tabs -->
+    <nav><%= render 'tabs' if can?(:read, :admin_dashboard) %></nav>
+    <% if can?(:create, Collection) %>
+      <%= link_to(
+            t(:'helpers.action.collection.create'),
+            '#',
+            data: { behavior: "select-work", target: "#collection-to-create", 'create-type' => 'batch' },
+            class: 'btn btn-primary create-collection-button'
+          ) %>
+    <% end %>
+  </section>
 
-        <%= render 'results_pagination' %>
+  <div class="panel panel-default collections-panel-wrapper">
+    <div class="panel-heading">
+      <h3 class="panel-title"><strong><%= @response.docs.count %> collections</strong> in the repository</h3>
+    </div>
+    <div class="panel-body">
+      <h2 class="sr-only">Collections listing</h2>
+      <%= render 'facets' %>
+      <!--
+      <div class="form-inline inline-dropdowns">
+        <label>Filter collections:</label>
+        <select class="form-control">
+          <option>Type</option>
+          <option>user</option>
+          <option>curated</option>
+        </select>
+        <select class="form-control">
+          <option>Visibility</option>
+          <option>Private</option>
+          <option>Public</option>
+          <option>Institution</option>
+        </select>
       </div>
+      -->
+      <%= render 'document_list' %>
+      <%= render 'results_pagination' %>
     </div>
   </div>
+
+  <!-- Render Modals -->
+  <%= render 'delete_collections_modal' %>
+  <%= render 'delete_collections_deny_modal' %>
+  <%= render 'select_collection_type_modal' %>
 </div>
