--- a/app/views/hyrax/my/_collection_action_menu.html.erb
+++ b/app/views/hyrax/my/_collection_action_menu.html.erb
@@ -5,10 +5,24 @@
   </button>
   <ul role="menu" class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu_<%= id %>">
     <li role="menuitem" tabindex="-1">
+      <%= link_to hyrax.collection_path(id),
+            class: 'itemicon',
+            title: t("hyrax.dashboard.my.action.view_collection") do %>
+        <%= t("hyrax.dashboard.my.action.view_collection") %>
+      <% end %>
+    </li>
+    <li role="menuitem" tabindex="-1">
       <%= link_to hyrax.edit_collection_path(id),
                   class: 'itemicon itemedit',
                   title: t("hyrax.dashboard.my.action.edit_collection") do %>
-        <i class="glyphicon glyphicon-pencil" aria-hidden="true"></i> <%= t("hyrax.dashboard.my.action.edit_collection") %>
+        <%= t("hyrax.dashboard.my.action.edit_collection") %>
+      <% end %>
+    </li>
+    <li role="menuitem" tabindex="-1">
+      <%= link_to hyrax.collection_path(id),
+            class: 'itemicon',
+            title: t("hyrax.dashboard.my.action.add_collection_to_another") do %>
+        <%= t("hyrax.dashboard.my.action.add_collection_to_another") %>
       <% end %>
     </li>
     <li role="menuitem" tabindex="-1">
@@ -18,7 +32,7 @@
                   method: :delete,
                   data: {
                     confirm: t("hyrax.dashboard.my.action.collection_confirmation", application_name: application_name) } do %>
-        <i class="glyphicon glyphicon-trash" aria-hidden="true"></i> <%= t("hyrax.dashboard.my.action.delete_collection") %>
+        <%= t("hyrax.dashboard.my.action.delete_collection") %>
       <% end %>
     </li>
   </ul>
