--- a/app/views/hyrax/my/collections/_default_group.html.erb
+++ b/app/views/hyrax/my/collections/_default_group.html.erb
@@ -1,11 +1,16 @@
-<table class="table table-striped">
+<button id="delete-collections-button" class="btn btn-danger delete-collections-button"><%= t("hyrax.dashboard.my.action.delete_collection") %></button>
+
+<table class="table table-striped datatable collections-list-table">
   <caption class="sr-only"><%= t("hyrax.dashboard.my.sr.listing") %> <%= application_name %></caption>
   <% unless params[:display_type] == 'list' %>
     <thead>
     <tr>
+      <th class="check-all"><label for="check_all" class="sr-only"><%= t("hyrax.dashboard.my.sr.check_all_label") %></label><%= render_check_all %></th>
       <th><%= t("hyrax.dashboard.my.heading.title") %></th>
-      <th><%= t("hyrax.dashboard.my.heading.date_uploaded") %></th>
+      <th><%= t("hyrax.dashboard.my.heading.type") %></th>
       <th><%= t("hyrax.dashboard.my.heading.visibility") %></th>
+      <th><%= t("hyrax.dashboard.my.heading.items") %></th>
+      <th><%= t("hyrax.dashboard.my.heading.last_modified") %></th>
       <th><%= t("hyrax.dashboard.my.heading.action") %></th>
     </tr>
     </thead>
