Updates to translation text - delete modal pluralization

--- a/app/views/hyrax/my/collections/_delete_collections_deny_modal.html.erb
+++ b/app/views/hyrax/my/collections/_delete_collections_deny_modal.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <form class="delete-collection-form">
         <div class="modal-body">
-          <p>You must select on or more collections to delete.</p>
+          <p>You must select one or more collections to delete.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-dismiss="modal"><%= t('helpers.action.close') %></button>
