--- a/app/views/hyrax/my/collections/_default_group.html.erb
+++ b/app/views/hyrax/my/collections/_default_group.html.erb
@@ -1,4 +1,4 @@
-<button id="delete-collections-button" class="btn btn-danger delete-collections-button"><%= t("hyrax.dashboard.my.action.delete_collection") %></button>
+<button id="delete-collections-button" class="btn btn-danger delete-collections-button"><%= t("hyrax.dashboard.my.action.delete_collections") %></button>
 
 <table class="table table-striped datatable collections-list-table">
   <caption class="sr-only"><%= t("hyrax.dashboard.my.sr.listing") %> <%= application_name %></caption>
