--- a/app/views/hyrax/my/collections/_delete_collections_modal.html.erb
+++ b/app/views/hyrax/my/collections/_delete_collections_modal.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <form class="delete-collection-form">
         <div class="modal-body">
-          <p>Deleting this collection will permanently remove the collection from the repository.  Items in teh collection will remain in the repository.  Are you sure you want to delete this collection?</p>
+          <p><span class="pluralized">Deleting this collection</span> will permanently remove the collection from the repository.  Items in teh collection will remain in the repository.  Are you sure you want to delete this collection?</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal"><%= t('helpers.action.cancel') %></button>
