--- a/app/views/hyrax/my/collections/index.html.erb
+++ b/app/views/hyrax/my/collections/index.html.erb
@@ -32,7 +32,7 @@
       <h3 class="panel-title"><strong><%= @response.docs.count %> collections</strong> in the repository</h3>
     </div>
     <div class="panel-body">
-      <h2 class="sr-only">Collections listing</h2>
+      <h2 class="sr-only"><%= t("hyrax.dashboard.my.collections.collections_listing") %></h2>
       <%= render 'facets' %>
       <!--
       <div class="form-inline inline-dropdowns">
