--- a/app/views/hyrax/dashboard/collections/_form.html.erb
+++ b/app/views/hyrax/dashboard/collections/_form.html.erb
@@ -11,91 +11,96 @@
       <li>
         <a href="#discovery" role="tab" data-toggle="tab"><%= t('.tabs.discovery') %></a>
       </li>
-      <% end %>
+      <% end # branding & discovery tabs %>
       <% if @collection.sharable? %>
       <li>
         <a href="#sharing" role="tab" data-toggle="tab"><%= t('.tabs.sharing') %></a>
       </li>
-      <% end %>
-    <% end %>
+      <% end # sharing tab %>
+    <% end # tabs for edit form %>
   </ul>
+
   <%= simple_form_for @form, url: [hyrax, :dashboard, @form], html: { class: 'editor' } do |f| %>
 
   <div class="tab-content">
-      <div id="description" class="tab-pane active">
-        <div class="panel panel-default labels">
-          <div class="panel-body">
+    <div id="description" class="tab-pane active">
+      <div class="panel panel-default labels">
+        <div class="panel-body">
 
-            <h2 class="non lower"><%= t('hyrax.collection.form.description') %></h2>
-            <div id="base-terms">
-              <% f.object.primary_terms.each do |term| %>
+          <h2 class="non lower"><%= t('hyrax.collection.form.description') %></h2>
+          <div id="base-terms">
+            <% f.object.primary_terms.each do |term| %>
+              <%= render_edit_field_partial(term, f: f) %>
+            <% end %>
+
+            <% if f.object.persisted? %>
+              <%# we're loading these values dynamically to speed page load %>
+              <%= f.input :thumbnail_id,
+                          input_html: { data: { text: f.object.thumbnail_title } } %>
+            <% end %>
+          </div>
+          <% if f.object.display_additional_fields? %>
+            <%= link_to t('hyrax.collection.form.additional_fields'),
+                    '#extended-terms',
+                    class: 'btn btn-default additional-fields',
+                    data: { toggle: 'collapse' },
+                    role: "button",
+                    'aria-expanded'=> "false",
+                    'aria-controls'=> "extended-terms" %>
+            <div id="extended-terms" class='collapse'>
+              <% f.object.secondary_terms.each do |term| %>
                 <%= render_edit_field_partial(term, f: f) %>
               <% end %>
-
-              <% if f.object.persisted? %>
-                <%# we're loading these values dynamically to speed page load %>
-                <%= f.input :thumbnail_id,
-                            input_html: { data: { text: f.object.thumbnail_title } } %>
-              <% end %>
             </div>
-            <% if f.object.display_additional_fields? %>
-              <%= link_to t('hyrax.collection.form.additional_fields'),
-                      '#extended-terms',
-                      class: 'btn btn-default additional-fields',
-                      data: { toggle: 'collapse' },
-                      role: "button",
-                      'aria-expanded'=> "false",
-                      'aria-controls'=> "extended-terms" %>
-              <div id="extended-terms" class='collapse'>
-                <% f.object.secondary_terms.each do |term| %>
-                  <%= render_edit_field_partial(term, f: f) %>
-                <% end %>
-              </div>
+          <% end %>
+          <%= hidden_field_tag :type, params[:type] %>
+          <% if params[:batch_document_ids].present? %>
+            <% params[:batch_document_ids].each do |batch_item| %>
+              <input type="hidden" name="batch_document_ids[]" value="<%= batch_item %>"/>
             <% end %>
-            <%= hidden_field_tag :type, params[:type] %>
-            <% if params[:batch_document_ids].present? %>
-              <% params[:batch_document_ids].each do |batch_item| %>
-                <input type="hidden" name="batch_document_ids[]" value="<%= batch_item %>"/>
-              <% end %>
-            <% end %>
-          </div>
+          <% end %>
         </div>
       </div>
+    </div>
 
-      <div id="branding" class="tab-pane">
-        <div class="panel panel-default labels">
-          <div class="panel-body">
-            <%= render 'form_branding', f: f %>
-          </div>
+  <% if @form.persisted? %>
+    <% if @collection.discoverable? %>
+    <div id="branding" class="tab-pane">
+      <div class="panel panel-default labels">
+        <div class="panel-body">
+          <%= render 'form_branding', f: f %>
         </div>
       </div>
+    </div>
 
-      <div id="discovery" class="tab-pane">
-        <div class="panel panel-default labels">
-          <div class="panel-body">
-            <%= render 'form_discovery', f: f %>
-          </div>
+    <div id="discovery" class="tab-pane">
+      <div class="panel panel-default labels">
+        <div class="panel-body">
+          <%= render 'form_discovery', f: f %>
         </div>
       </div>
+    </div>
+    <% end # branding & discovery tabs contents %>
 
-      <div id="sharing" class="tab-pane">
-        <div class="panel panel-default labels" id="collection_permissions" data-param-key="<%= f.object.model_name.param_key %>">
-          <div class="panel-body">
-            <%= render 'form_share', f: f %>
-          </div>
+    <% if @collection.sharable? %>
+    <div id="sharing" class="tab-pane">
+      <div class="panel panel-default labels" id="collection_permissions" data-param-key="<%= f.object.model_name.param_key %>">
+        <div class="panel-body">
+          <%= render 'form_share', f: f %>
         </div>
       </div>
+    </div>
+    <% end # sharing tab contents %>
+  <% end # tab contents for edit form %>
 
-      <div class="panel-footer">
-        <% if params[:action] == "new" %>
-          <%= f.submit t(:'hyrax.collection.select_form.create'), class: 'btn btn-primary', onclick: "confirmation_needed = false;", id: "create_submit", name: "create_collection" %>
-        <% else %>
-          <%= f.submit t(:'hyrax.collection.select_form.update'), class: 'btn btn-primary', onclick: "confirmation_needed = false;", id: "update_submit", name: "update_collection" %>
-        <% end %>
-        <%= link_to t(:'helpers.action.cancel'), main_app.root_path, class: 'btn btn-link' %>
-      </div>
-
-  <% end %>
-  <% # end of form %>
-
+    <div class="panel-footer">
+      <% if params[:action] == "new" %>
+        <%= f.submit t(:'hyrax.collection.select_form.create'), class: 'btn btn-primary', onclick: "confirmation_needed = false;", id: "create_submit", name: "create_collection" %>
+      <% else %>
+        <%= f.submit t(:'hyrax.collection.select_form.update'), class: 'btn btn-primary', onclick: "confirmation_needed = false;", id: "update_submit", name: "update_collection" %>
+      <% end %>
+      <%= link_to t(:'helpers.action.cancel'), main_app.root_path, class: 'btn btn-link' %>
+    </div>
+  </div>
+  <% end # simple_form_for %>
 </div>
