Select collection type modal
Adds functionality to select and save the collection type when creating
a new collection

Resolves issue #1506

Several specs are pending for the new presenter.

--- a/app/views/hyrax/dashboard/collections/_form.html.erb
+++ b/app/views/hyrax/dashboard/collections/_form.html.erb
@@ -50,6 +50,7 @@
               </div>
             <% end %>
             <%= hidden_field_tag :type, params[:type] %>
+            <%= hidden_field_tag :collection_type_gid, @collection.collection_type_gid %>
             <% if params[:batch_document_ids].present? %>
               <% params[:batch_document_ids].each do |batch_item| %>
                 <input type="hidden" name="batch_document_ids[]" value="<%= batch_item %>"/>
